syntax = "proto3";
package pattern;

option csharp_namespace = "Service";

message PatternUploaded {
    string source_id = 1;
    string file_name = 2;
    bytes content = 3;
	string owner_id = 4;
}
